[project]
name = "lumen-ci"
version = "0.1.0"
dependencies = [
    "pytest==7.3.2"
]

[tool.setuptools]
packages = ["cli"]

[tool.setuptools.package-dir]
cli = "cli"

[tool.ruff.lint]
# Enable preview mode for linting
preview = true

# Now you can select your preview rules, like RUF048
extend-select = ["RUF048"]
