load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "ScalarType",
    hdrs = ["ScalarType.h"],
    deps = ["//c10/util:base"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "headers",
    srcs = glob(
        [
            "*.h",
            "impl/*.h",
        ], exclude = [
        ],
    ),
    visibility = ["//c10:__pkg__"],
)

filegroup(
    name = "sources",
    srcs = glob(
        [
            "*.cpp",
            "impl/*.cpp",
        ], exclude = [
        ],
    ),
    visibility = ["//c10:__pkg__"],
)
